Refactor ETL pipeline